# fedcourtsai

./: .geminiignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  corpus-scope-audit-2026-06-30.json  corpus-scope-audit-2026-07-01.json  corpus-scope-audit-2026-07-02.json  corpus-scope-audit-2026-07-03.json  corpus-scope-audit-2026-07-04.json  corpus-scope-audit-2026-07-06.json  corpus-scope-audit-2026-07-07.json  corpus-scope-audit-2026-07-08.json  corpus-scope-audit-2026-07-09.json  corpus-scope-audit-2026-07-10.json  corpus-scope-audit-2026-07-11.json  corpus-scope-audit.json  corpus-validation-2026-06-27.json  corpus-validation-2026-06-28.json  corpus-validation-2026-06-29.json  corpus-validation-2026-06-30.json  corpus-validation-2026-07-01.json  corpus-validation-2026-07-02.json  corpus-validation-2026-07-03.json  corpus-validation-2026-07-04.json  corpus-validation-2026-07-05.json  corpus-validation-2026-07-06.json  corpus-validation-2026-07-07.json  corpus-validation-2026-07-08.json  corpus-validation-2026-07-09.json  corpus-validation-2026-07-10.json  corpus-validation-2026-07-11.json  corpus-validation-2026-07-12.json  corpus-validation-2026-07-13.json  corpus-validation-2026-07-14.json  (+56 more)
.claude/agents/: code-reviewer.md  docs-reviewer.md  security-reviewer.md  workflow-reviewer.md
.devcontainer/: check-corpus-session.sh  devcontainer.json  setup-aws.sh  setup-corpus-access.sh
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  pull.yml  reconcile.yml  seed.yml
.github/codeql/: codeql-config.yml
.github/prompts/: dev.md  evaluate.md  predict.md  reconcile.md  seed.md
.github/workflows/: ci.yml  (+18 more)
config/: evaluators.yaml  predictors.yaml  seed-progress.yaml  tracking.yaml
corpus/: .gitignore  README.md  corpus.db.dvc  corpus.db.ref
docs/: agent-workflow.md  architecture.md  budget.md  cli.md  data-model.md  data-pipeline.md  data-sources.md  live-sources-probe.md  live-sources.md  milestones.md  pipeline.md  process-version.md  salience.md  security.md  seed-backfill.md  testing.md
metrics/: README.md  backtest.json  cert-backtest.json  leaderboard.json  statpack.json  statpack.md
schemas/: agent_flags.schema.json  agent_tooling.schema.json  analytics_report.schema.json  backtest.schema.json  case.schema.json  cell_failure.schema.json  cert_backtest.schema.json  corpus_row.schema.json  corpus_scope_audit.schema.json  corpus_validation.schema.json  evaluation.schema.json  evaluator_config.schema.json  event.schema.json  leaderboard.schema.json  live_frontier.schema.json  mcp_server_config.schema.json  ops_report.schema.json  outcome.schema.json  prediction.schema.json  predictor_config.schema.json  retrieval_log.schema.json  scope_manifest.schema.json  seed_progress.schema.json  statpack.schema.json  usage.schema.json
test/: test_registry.py
tests/: conftest.py  test_agent_feedback.py  test_analytics.py  test_authz.py  test_backtest.py  test_cascade.py  test_cascade_smoke.py  test_casestore.py  test_cert_backtest.py  test_cert_signals.py  test_cleanup.py  test_cli_cascade.py  test_cli_collect.py  test_cli_finalize.py  test_cli_materialize.py  test_cli_matrix.py  test_cli_paths.py  test_cli_provision.py  test_cli_prune.py  test_cli_query.py  test_cli_stamp.py  test_cli_usage.py  test_cli_version.py  test_client.py  test_collect.py  test_config.py  test_corpus.py  test_corpus_index.py  test_corpus_layout.py  test_corpus_ranged.py  test_corpus_remote.py  test_corpus_service.py  test_corpus_split_writer.py  test_discover.py  test_documents.py  test_dvc.py  test_evaluate.py  test_evaluate_backlog.py  test_events.py  test_finalize.py  (+43 more)
(+13296 files in other folders)
