[project]
name = "fedcourtsai"
version = "0.0.1"
description = "Agentic AI system to predict events in US federal courts"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ModelMirrorAI" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "typer>=0.15",
    "tenacity>=9.0",
    "python-dateutil>=2.9",
]

[project.scripts]
fedcourts = "fedcourtsai.cli:app"

[project.optional-dependencies]
dvc = [
    "dvc[s3]>=3.55",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fedcourtsai"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["PLR2004"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["dateutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fedcourtsai.cli"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/fedcourtsai"]
