[project]
name = "fedcourtsai"
version = "0.0.1"
description = "Agentic AI system to predict events in US federal courts"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ModelMirrorAI" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "typer>=0.26.8",
    "tenacity>=9.0",
    "python-dateutil>=2.9",
    # The ranged corpus backend: apsw for the read-only VFS (typed, maintained),
    # boto3 for the S3 ranged GETs behind the transport seam.
    "apsw>=3.50",
    "boto3>=1.40",
    "pypdf>=6",
]

[project.scripts]
fedcourts = "fedcourtsai.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "mypy>=2.2.0",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
    # Offline S3 stand-in for the ranged corpus backend's transport tests.
    "moto>=5.0",
]
[tool.uv]
# Install `dev` on a bare `uv sync`, so the gate commands work locally without
# a `--group` flag. Runtime-only installs opt out via `--no-default-groups`.
# The corpus remote is served by the runtime boto3 dependency (fedcourts
# corpus-pull/corpus-push); no separate data-tooling group is needed.
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fedcourtsai"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["PLR2004"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["dateutil.*", "boto3.*", "botocore.*", "moto.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fedcourtsai.cli"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/fedcourtsai"]
